fixed navbar collapse

--- a/client/styles/styles.less
+++ b/client/styles/styles.less
@@ -391,3 +391,7 @@ li {
 .combat-buttons {
   padding: 1rem 1rem;
 }
+
+.mdi-navigation-menu {
+  margin-left: 10%;
+}
